tests/paczka1/fuzzy1/28591586.err
Error in line 7: A50 A125 44,6
Error in line 8: sLcqR S775 66,1
Error in line 10: wkcyy0OZvu A125 68,7
